# DocumentBERT

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Taskfile.yaml  main.bbl  pyproject.toml  usecase.env.example
configs/: train.yaml
configs/data/: mnist.yaml
configs/model/: mnist.yaml
docs/: dependencies.md  docker.md  general.md  index.md  serving.md  workflow.md
latex/: appendix.tex  main.tex  sources.bib
local/: .gitignore
requirements/: processing.txt  requirements.txt  serving.txt  training.txt
scripts/: example_spark.py  serving_entrypoint.sh
src/pipelines/: common.py  constants.py  example_pipeline.py
src/pipelines/steps/: example_processor.py  example_register.py  example_spark.py  example_training.py  example_tuner.py
src/project/: train.py
src/project/example_model/: cli.py  preprocessing.py  training.py
src/project/example_processing/: cli.py  function.py
src/project/example_serving/: deployment.py  driver.py  example_query.http  models.py  multi.py  orchestrator.py  sagemaker.py  single.py
src/project/example_spark/: cli.py  function.py
src/project/utils/: __init__.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py
tasks/: docker.yaml  qa.yaml  serving.yaml  setup.yaml
tests/: test_example_model_train.py  test_example_processing.py  test_example_spark.py
tests/data/: clean.parquet  example.csv
